--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mobx": "^5.15.2",
     "mobx-react": "^6.1.5",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-grid-layout": "^0.18.3"
   }
 }
