--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mobx-react": "^6.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-grid-layout": "^0.18.3"
+    "react-grid-layout": "^0.18.3",
+    "uid": "^1.0.0"
   }
 }
